added button styles from bootstrap to all buttons in quiz; refactored html code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href=/style.css>
-    <link rel="script" href="/script.js">
+    <link rel="stylesheet" href=style.css>
+    <link rel="script" href="4script.js">
     <title>Code Quiz</title>
 </head>
 <header>
@@ -15,62 +15,109 @@
   <div class="container">
   <main>
   <!--This is the first page the user sees where they can read the rules and begin the game-->    
-  <div>
+  <div id="start-game">
     <h2 class="h2">Instructions:</h2>
     <p>You have 60 seconds to complete the quiz. For every right answer, 10 seconds will be added to your time! But beware, for every WRONG answer, <b>15 seconds</b> will be subtracted from your time! Play at your own risk...</p>
-    <button id="start-quiz">Start Quiz</button>
+    <button type="button" class="btn btn-outline-primary" id="start-quiz">Start Quiz</button>
    </div>
+   <br>
 <!--This section is the first page of the quiz-->
-  <div>
+  <div id="question1">
    <h2 class="h2">Question 1:</h2>
      <p class="question">What does 'CSS' stand for?</p>
       <div class="row">
-        <div class="col-md-2">
-          <button type="button" class="btn btn-outline-info">Cascading Style Sheet</button>
-          <div class="col-md-2">
-          <button type="button" class="btn btn-info">Controlled Style Sections</button>
+        <div class="col-md-6">
+          <button type="button" class="btn btn-outline-info" class="answer-button">Cascading Style Sheet</button>
+        </div>
+        <div class="col-md-6">
+          <button type="button" class="btn btn-info" class="answer-button">Controlled Style Sections</button>  
         </div>
         </div>
       </div>
         <div class="row">
-        <div class="col-md-2">
-          <button type="button" class="btn btn-outline-info">Cascading Style Sections</button>
-          <button type="button" class="btn btn-info">Cats Saunter Slowly</button>
+        <div class="col-md-6">
+          <button type="button" class="btn btn-info" class="answer-button">Cascading Style Sections</button>
         </div>
-     </div>
-  </div>
+         <div class="col-md-6">
+          <button type="button" class="btn btn-outline-info" class="answer-button">Cats Saunter Slowly</button>
+         </div>
+        </div> 
+     <br>
 <!--This section is the second page of the quiz-->  
-  <div>
+  <div id="question2">
    <h2 class="h2">Question 2:</h2>
      <p class="question">What makes up the 'Box Model' in CSS?</p>
-      <button class="answer-button">Tag, Padding, Margin, Content</button>
-      <button class="answer-button">Content, Padding, Border, Margin</button>
-      <button class="answer-button">Attributes, Content, Class, Border</button>
-      <button class="answer-button">Sex, Drugs, Rock n' Roll</button>
-  </div>
+      <div class="row">
+       <div class="col-md-6">
+        <button type="button" class="btn btn-success" class="answer-button">Tag, Padding, Margin, Content</button>
+        </div>
+        <div class="col-md-6"> 
+        <button type="button" class="btn btn-outline-success" class="answer-button">Content, Padding, Border, Margin</button>
+        </div>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+        <button type="button" class="btn btn-outline-success"class="answer-button">Attributes, Content, Class, Border</button>
+        </div>
+        <div class="col-md-6">
+        <button type="button" class="btn btn-success" class="answer-button">Sex, Drugs, Rock n' Roll</button>
+        </div>
+      </div>
+      <br>
 <!--This section is the third page of the quiz-->
-  <div>
+  <div id="question3">
     <h2 class="h2">Question 3:</h2>
       <p class="question">Which one of these are NOT a type of loop?</p>
-       <button class="answer-button">For</button>
-       <button class="answer-button">For/In</button>
-       <button class="answer-button">Coulda/Woulda/Shoulda</button>
-       <button class="answer-button">While</button>
-  </div>
+       <div class="row">
+        <div class="col-md-6">
+         <button type="button" class="btn btn-outline-secondary" class="answer-button">For</button>
+        </div>
+        <div class="col-md-6">
+         <button type="button" class="btn btn-secondary" class="answer-button">For/In</button>
+        </div>
+       </div>
+      <div class="row">
+       <div class="col-md-6">
+         <button type="button" class="btn btn-secondary" class="answer-button">Coulda/Woulda/Shoulda</button>
+       </div>
+       <div class="col-md-6">
+         <button type="button" class="btn btn-outline-secondary" class="answer-button">While</button>
+       </div>
+     </div>
+    </div>
+  <br>
   <!--This section is the fourth page of the quiz-->
-   <div>
+   <div id="question3">
     <h2 class="h2">Question 4:</h2>
       <p class="question">What languages does a 'MERN' developer use?</p>
-       <button class="answer-button">Mango, Explorer, Ruby, Node.js</button>
-       <button class="answer-button">Mode, Express, React, Node.js</button>
-       <button class="answer-button">Momma, Eats, Rat, Nuggets</button>
-       <button class="answer-button">MongoDB, Express, React, Node.js</button>
-   </div>
+       <div class="row">
+        <div class="col-md-6">
+         <button type="button" class="btn btn-outline-danger" class="answer-button">Mango, Explorer, Ruby, Node.js</button>
+        </div> 
+        <div class="col-md-6">
+         <button type="button" class="btn btn-danger" class="answer-button">Mode, Express, React, Node.js</button>
+        </div> 
+       </div>  
+        <div class="row">
+         <div class="col-md-6">
+         <button type="button" class="btn btn-danger" class="answer-button">Momma, Eats, Rat, Nuggets</button>
+        </div> 
+        <div class="col-md-6">
+         <button type="button" class="btn btn-outline-danger" class="answer-button">MongoDB, Express, React, Node.js</button>
+        </div>
+       </div>
+     </div> 
+    <br>
    <!--This section is the end of game page where a user can enter in their initials for the high scores-->
-   <div>
+   <div id="end-game">
      <h2 class="h2">End of Game: You survived!</h2>
-       <input type="text" placeholder="Your Initials Here" name="user-initials" id="user-initials"/>
-       <button id="submit-initials">Click to enter the Code Quiz hall of fame</button>
+      <div class="row">
+        <div class="col-md-6">
+         <input type="text" placeholder="Your Initials Here" name="user-initials" id="user-initials"/>
+        </div>
+      </div>
+       <button type="button" class="btn btn-outline-primary" id="submit-initials">Click to enter the Code Quiz hall of fame</button>
        <!--do I need a data-index here? https://www.w3schools.com/tags/att_global_data.asp-->
    </div>
 
