created pseudo code in JS with a loop in it and additional comments at the end of the index.html for displaying score w/ initials

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
      <p class="question">What does 'CSS' stand for?</p>
       <div class="row">
         <div class="col-md-6">
-          <button type="button" class="btn btn-outline-info" class="answer-button">Cascading Style Sheet</button>
+          <button type="button" class="btn btn-outline-info" class="answer-button1" id="answer1a">Cascading Style Sheet</button>
         </div>
         <div class="col-md-6">
-          <button type="button" class="btn btn-info" class="answer-button">Controlled Style Sections</button>  
+          <button type="button" class="btn btn-info" class="answer-button1" id="answer1b">Controlled Style Sections</button>  
         </div>
         </div>
       </div>
         <div class="row">
         <div class="col-md-6">
-          <button type="button" class="btn btn-info" class="answer-button">Cascading Style Sections</button>
+          <button type="button" class="btn btn-info" class="answer-button1" id="answer1c">Cascading Style Sections</button>
         </div>
          <div class="col-md-6">
-          <button type="button" class="btn btn-outline-info" class="answer-button">Cats Saunter Slowly</button>
+          <button type="button" class="btn btn-outline-info" class="answer-button1" id="answer1d">Cats Saunter Slowly</button>
          </div>
         </div> 
      <br>
@@ -113,6 +113,9 @@
    <div id="end-game">
      <h2 class="h2">End of Game: You survived!</h2>
       <div class="row">
+        <div class="col-md-6">
+         <h3 id="total-score">Total Score:<span id="score"></span></h3>
+        </div>
         <div class="col-md-6">
          <input type="text" placeholder="Your Initials Here" name="user-initials" id="user-initials"/>
         </div>
