start button connected to timer which will countdown from 60 to 0 in one second increments

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
         </div>
         <div class="col-md-6">
         <button type="button" class="btn btn-success" class="answer-button">Sex, Drugs, Rock n' Roll</button>
-        </div>
-      </div>
+      </div>  
+    </div>
+  </div>
       <br>
 <!--This section is the third page of the quiz-->
   <div id="question3">
@@ -123,6 +124,7 @@
        <button type="button" class="btn btn-outline-primary" id="submit-initials">Click to enter the Code Quiz hall of fame</button>
        <!--do I need a data-index here? https://www.w3schools.com/tags/att_global_data.asp-->
    </div>
+   <!--page with the high scores listed out here, names with scores-- store to a string and write to page? make it so they don't disappear-->
 
 </main>
 <footer>
