--- a/hardcode.html
+++ b/hardcode.html
@@ -10,14 +10,19 @@
 </head>
 <header>
 <h1 class="title">MOVIE QUIZ BONANZA!!!</h1>
+
+<p>You have 60 seconds to complete the quiz. For every right answer, 10 seconds will be added to your time! But beware, for every WRONG answer, <b>15 seconds</b> will be subtracted from your time! Play at your own risk...</p>
+<br>
 <div class="timer">
     <span id="seconds">60</span>
 </div>
-<div id=question1></div>
-
+<br>
 </header>
 <body>
-  <div class="quiz"></div>
+    
+<div id="quiz"></div>
+<div id="score"></div>
+<input id="initials" placeholder="Your Initials Here">
   <main>
  
 </main>
