--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
 <div class="timer">
     <span id="seconds">60</span>
 </div>
-<br>
 </header>
 <body>
-    
-<div id="quiz"></div>
-<div id="score"></div>
-<input id="initials" placeholder="Your Initials Here">
-  <main>
- 
-</main>
+  <p id="quizQuestions"></p> 
+
+  <div id="score"></div>
+
+  <input id="initials" placeholder="Your Initials Here">
+  
 <footer>
 </footer>
 </div>
