app is able to cycle through all 4 questions, also gives accurate count of final score, time set to 60 seconds

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </header>
 <body>
   <p id="quizQuestions"></p> 
-
-  <div id="score"></div>
+  <p id="right-wrong"></p>
+  <p id="score"></p>
 
   <input id="initials" placeholder="Your Initials Here">
   
