updated README.md, code refactored on both JS and HTML pages

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <header>
 <h1 class="title">MOVIE QUIZ BONANZA!!!</h1>
 
-<p>You have 60 seconds to complete the quiz. For every right answer, 10 seconds will be added to your time! But beware, for every WRONG answer, <b>15 seconds</b> will be subtracted from your time! Play at your own risk...</p>
+  <p>You have 60 seconds to complete the quiz. For every right answer, 10 seconds will be added to your time! But beware, for every WRONG answer, <b>15 seconds</b> will be subtracted from your time! Play at your own risk...</p>
+  
 <br>
+<div id="button"></div>
 <div class="timer">
     <span id="seconds">60</span>
 </div>
@@ -21,8 +23,7 @@
   <p id="quizQuestions"></p> 
   <p id="right-wrong"></p>
   <p id="score"></p>
-
-  <input id="initials" placeholder="Your Initials Here">
+<input id="initials" placeholder="Your Initials Here">
   
 <footer>
 </footer>
