made it so time disappears when quiz is finished and alert for time is up only shows if all questions are not answered by 0 timer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p id="quizQuestions"></p> 
   <p id="right-wrong"></p>
   <p id="score"></p>
-<input id="initials" placeholder="Your Initials Here">
+<input class="d-none" id="initials" placeholder="Your Initials Here">
   
 <footer>
 </footer>
