added submit button that only shows up when the quiz is finished

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <p id="right-wrong"></p>
   <p id="score"></p>
 <input class="d-none" id="initials" placeholder="Your Initials Here">
+<button class="d-none" id="submit-button">Submit</button>
   
 <footer>
 </footer>
