code now works perfectly. Able to add initials to score board and it remains on the page even after refresh

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <p id="quizQuestions"></p> 
   <p id="right-wrong"></p>
   <p id="score"></p>
+  
+  <ul id="saved-initials"></ul>
 <input class="d-none" id="initials" placeholder="Your Initials Here">
 <button class="d-none" id="submit-button">Submit</button>
   
