Added start button to HTML instead of Javascript, imported element for styling purposes

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Code Quiz</title>
     
 </head>
+<div class="container">
 <header>
 <h1 class="title">MOVIE QUIZ BONANZA!!!</h1>
 
   <p>You have 60 seconds to complete the quiz. For every right answer, 10 seconds will be added to your time! But beware, for every WRONG answer, <b>15 seconds</b> will be subtracted from your time! Play at your own risk...</p>
   
-<br>
+
 <div id="button"></div>
 <div class="timer">
     <span id="seconds">60</span>
+    <button class="d-block" id="start-button">Start Quiz!</button>
 </div>
 </header>
 <body>
@@ -33,4 +35,5 @@
 </div>
 <script src="script.js"></script>
 </body>
+</div>
 </html>
