--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
     
 </head>
 <div class="container">
-<header>
+<body>
 <h1 class="title">MOVIE QUIZ BONANZA!!!</h1>
 
   <p>You have 60 seconds to complete the quiz. For every right answer, 10 seconds will be added to your time! But beware, for every WRONG answer, <b>15 seconds</b> will be subtracted from your time! Play at your own risk...</p>
-  
 
-<div id="button"></div>
+
+
+
 <div class="timer">
-    <span id="seconds">60</span>
-    <button class="d-block" id="start-button">Start Quiz!</button>
+  <span id="seconds">60</span>
+  <button id="start-button">Start Quiz!</button>
 </div>
-</header>
-<body>
   <p id="quizQuestions"></p> 
   <p id="right-wrong"></p>
   <p id="score"></p>
